# comfyui-jbnodes

./: .gitignore  BW_COMPARATIVE_ANALYSIS.md  CODE_OF_CONDUCT.md  README.md  __init__.py  cameras.json  cie.py  classes.py  film_grain.glsl  film_stocks.json  filters.json  filters.py  grayscale.py  illuminants.json  node_config.py  nodes.py  papers.json  print.py  pyproject.toml  requirements.txt  spectral.py  util.py  wratten_filters.json
config/: cameras.json  contrast_filters.json  film_formats.json  film_stock_prompt_v2.json  film_stock_prompt_v3.json  film_stock_prompt_v4.json  film_stocks.json  film_stocks_v2.json  grayscale.json  illuminants.json  papers.json
examples/: wratten_filter_trichromy_demo.json
glsl/: film_grain.glsl  vertex.glsl
models/: camera.py  filmformat.py  filmgrain.py  filmstock.py  framesize.py  hdcurve.py  latentsize.py
nodes/: camera_image_pipe.py  camera_lab.py  color_chart_Image.py  crop_film_aspect_ratio.py  developer_lab.py  film_aspect_ratio.py  film_grain_lab.py  filter_lab.py  grayscale_lab.py  merge_rgb_channels.py  print_lab_graded.py  print_lab_multigrade.py  print_lab_splitgrade.py  prompt_lab.py
src/: darkroom.py  darkroom_lib.py  filmgrain.py  filmgrain_lib.py  filters.py  filters_lib.py  grain_engine.py  grayscale.py  grayscale_lib.py  interpolate.py  lut.py  lut_lib.py  spectral.py  spectral_lib.py  srgb_lib.py
web/js/: dynamic_camera.js  dynamic_curves.js  dynamic_deck_sets.js  dynamic_latent_sizes.js
