[project]
name = "comfyui-jbnodes"
description = "ComfyUI nodes for creating images with the look and feel of various black-and-white film stocks."
version = "0.2.4"
license = {file = "LICENSE"} 
dependencies = ["numpy", "torch", "colour-science", "moderngl", "Pillow"]

[project.urls]
Repository = "https://github.com/AlbertJBurton/comfyui-jbnodes"
Documentation = "https://github.com/AlbertJBurton/comfyui-jbnodes/wiki"
"Bug Tracker" = "https://github.com/AlbertJBurton/comfyui-jbnodes/issues"

[tool.comfy]
PublisherId = "jburton"
DisplayName = "ComfyUI-JBNodes"
Icon = ""
includes = [] 
"requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

